[package]
name = "kiwivm_cli"
version = "0.1.0"
authors = ["Wang Qin <wangqin0@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
